# mail-deduplicate

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .mailmap  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  changelog.html  changelog.md  changelog.rst  citation.cff  claude.md  cli-parameters.html  code-of-conduct.html  configuration.html  design.html  development.html  genindex.html  history.html  index.html  install.html  labels.toml  license.html  lychee.toml  mail_deduplicate.html  mail_deduplicate.tests.html  maildir-deduplicate.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  readme.rst  readthedocs.yml  requirements-docs.txt  requirements.txt  search.html  (+5 more)
.doctrees/: changelog.doctree  cli-parameters.doctree  code-of-conduct.doctree  configuration.doctree  design.doctree  development.doctree  environment.pickle  history.doctree  index.doctree  install.doctree  license.doctree  mail_deduplicate.doctree  mail_deduplicate.tests.doctree  modules.doctree  tests.doctree  todolist.doctree
.github/: dependabot.yaml  labeller-content-based.yaml  labeller-file-based.yaml  labels.json  pull_request_template.md  update_mailmap.py
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  feature_request.md
.github/workflows/: autofix.yaml  autolock.yaml  build.yaml  changelog.yaml  docs.yaml  label-sponsors.yaml  labeller-content-based.yaml  labeller-file-based.yaml  labels.yaml  lint.yaml  release.yaml  tests.yaml
_modules/: index.html  mail_deduplicate.html
_modules/mail_deduplicate/: action.html  cli.html  deduplicate.html  mail.html  mail_box.html  strategy.html
_modules/mail_deduplicate/tests/: conftest.html  test_action.html  test_cli.html  test_mail.html  test_mail_box.html  test_strategy.html
_modules/tests/: test_action.html  test_cli.html
_sources/: cli-parameters.md.txt  configuration.md.txt  design.md.txt  development.md.txt  history.md.txt  index.md.txt  install.md.txt  license.md.txt  mail_deduplicate.rst.txt  tests.rst.txt
_static/: documentation_options.js
docs/: cli-help.md  cli-parameters.md  conf.py  configuration.md  contributing.md  design.md  design.rst  development.md  development.rst  history.md  history.rst  index.md  index.rst  install.md  install.rst  license.md  license.rst  mail_deduplicate.md  mail_deduplicate.rst  mail_deduplicate.tests.rst  maildir_deduplicate.rst  maildir_deduplicate.tests.rst  modules.rst  tests.md  tests.rst  usage.rst
docs/assets/: dependencies.mmd  mail-deduplicate-logo-square.xcf
docs/images/: dependencies.dot  mail-deduplicate-logo-header.xcf
mail_deduplicate/: __init__.py  __main__.py  action.py  cli.py  colorize.py  deduplicate.py  mail.py  mail_box.py  mailbox.py  strategy.py
mail_deduplicate/tests/: case.py  conftest.py  test_action.py  test_cli.py  test_deduplicate.py  test_mail.py  test_mailbox.py  test_strategy.py
maildir_deduplicate/: __init__.py  cli.py  deduplicate.py  mail.py
maildir_deduplicate/tests/: __init__.py  case.py  test_cli.py  test_deduplicate.py  test_maildir_deduplicate.py
maildir_deduplicate/tests/test_maildirs/strategy_date/cur/: mail0:1,S  mail1:1,S
maildir_deduplicate/tests/testdata/maildir_dups/cur/: mail0:1,S
testdata/maildir_dups/cur/: mail1:1,S
tests/: cli-test-plan.yaml  conftest.py  test_action.py  test_cli.py  test_mail.py  test_mail_box.py  test_strategy.py
