[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "mail-deduplicate"
version = "8.0.0"
# Python versions and their status: https://devguide.python.org/versions/
requires-python = ">= 3.11"
description = "📧 CLI to deduplicate mails from mail boxes"
authors = [{ name = "Kevin Deldycke", email = "kevin@deldycke.com" }]
readme = "readme.md"
keywords = [
    'Babyl',
    'CLI',
    'MH',
    'MMDF',
    'cleanup',
    'dedupe',
    'deduplication',
    'email',
    'mail',
    'mailbox',
    'maildir',
    'mbox',
]
classifiers = [
    # See: https://pypi.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Communications :: Email',
    'Topic :: Utilities',
    'Typing :: Typed',
]
# Semantic versioning works in theory. In practice, it is hard to guarantee.
# That's why we rely on >= specifier instead of ~= to relax constraints. This gives more freedom to packagers to
# release hotfixes for security vulnerabilities in the future.
# See also discussion about upper limits at: https://iscinumpy.dev/post/bound-version-constraints/#tldr
# All minimal version choice are documented. Reasons to bump a minimal version are:
# - bug fixes,
# - security fixes,
# - new code path we depends on,
# - aligns minimal Python requirements to ours,
# - adds new explicit support Python version.
dependencies = [
    # arrow 1.3.0 is the first version to add support for Python 3.12.
    "arrow >= 1.3.0",
    # boltons 25.0.0 is the first version to support Python 3.13.
    "boltons >= 25.0.0",
    # click-extra 6.2.0 implements EnumChoice.
    "click-extra >= 6.2.0",
]

[tool.uv.sources]
click-extra = { git = "https://github.com/kdeldycke/click-extra" }

[project.optional-dependencies]
## Non-runtime dependencies, for development and CI, are using the ~= specifier to reduce randomness.
## Unless the package has been referenced in sections above, in which case we align the version specifier.
test = [
    "click-extra [pytest] > 6.2.0",
    "coverage [toml] ~= 7.11.0",
    "extra-platforms [pytest] ~= 5.0.0",
    "pytest ~= 8.4.2",
    "pytest-cov ~= 7.0.0",
    "pytest-github-actions-annotate-failures ~= 0.3.0",
    "pytest-randomly ~= 4.0.0",
]
typing = ["types-boltons ~= 25.0.0.20250822", "types-tabulate ~= 0.9.0.2"]
docs = [
    "click-extra [sphinx] > 6.2.0",
    "furo ~= 2025.9.25",
    "myst-parser ~= 4.0.0",
    "sphinx ~= 8.2.3",
    "sphinx-autodoc-typehints ~= 3.5.1",
    "sphinx-click ~= 6.1.0",
    "sphinx-copybutton ~= 0.5.2",
    "sphinx-design ~= 0.6.0",
    "sphinx-issues ~= 5.0.0",
    "sphinxcontrib-mermaid ~= 1.0.0",
    "sphinxext-opengraph ~= 0.13.0",
]

[project.urls]
"Homepage" = 'https://github.com/kdeldycke/mail-deduplicate'
"Documentation" = 'https://kdeldycke.github.io/mail-deduplicate'
"Repository" = 'https://github.com/kdeldycke/mail-deduplicate'
"Funding" = "https://github.com/sponsors/kdeldycke"
"Issues" = "https://github.com/kdeldycke/mail-deduplicate/issues"
"Changelog" = "https://github.com/kdeldycke/mail-deduplicate/blob/main/changelog.md"

[project.scripts]
mdedup = "mail_deduplicate.__main__:main"

[tool.nuitka]
product-name = "Mail Deduplicate"
file-description = "📧 CLI to deduplicate mails from mail boxes"
copyright = "Kevin Deldycke <kevin@deldycke.com> and contributors. Distributed under GPL-2.0-or-later license."
file-version = "8.0.0"
product-version = "8.0.0"
macos-app-icon = "docs/assets/icon.png"
linux-icon = "docs/assets/icon.png"
windows-icon-from-ico = "docs/assets/icon.png"

[tool.uv]
package = true

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
addopts = [
    "--durations=10",
    "--cov=mail_deduplicate",
    "--cov-branch",
    "--cov-precision=2",
    "--cov-report=term",
    "--cov-report=xml",
]
# Make sure tests that are expected to fail do not resurect and start working all of a sudden.
xfail_strict = true

[tool.bumpversion]
current_version = "8.0.0"
allow_dirty = true

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in project section.
filename = "./pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update the version in standard Markdown changelog.
filename = "./changelog.md"
search = "## [{current_version} (unreleased)]("
replace = "## [{new_version} (unreleased)]("

[[tool.bumpversion.files]]
# Update the version in the citation file.
filename = "./citation.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
# Update the release date in the citation file.
filename = "./citation.cff"
regex = true
search = "date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}"
replace = "date-released: {utcnow:%Y-%m-%d}"

[tool.typos]
default.extend-ignore-identifiers-re = [
    # error: `ist` should be `is`, `it`, `its`, `sit`, `list`
    #     ╭▸ ./docs/development.md:107:10
    #     │
    # 107 │ - [chalk.ist](https://chalk.ist)
    #     ╰╴         ━━━
    # error: `ist` should be `is`, `it`, `its`, `sit`, `list`
    #     ╭▸ ./docs/development.md:107:29
    #     │
    # 107 │ - [chalk.ist](https://chalk.ist)
    #     ╰╴                            ━━━
    "ist",
]
