[build-system]
requires = ["uv_build >= 0.9.0"]
build-backend = "uv_build"

[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "mail-deduplicate"
version = "9.0.0"
# Python versions and their status: https://devguide.python.org/versions/
requires-python = ">= 3.10"
description = "📧 CLI to deduplicate mails from mail boxes"
authors = [{ name = "Kevin Deldycke", email = "kevin@deldycke.com" }]
readme = "readme.md"
license = "GPL-2.0-or-later"
license-files = [ "license" ]
keywords = [
    'Babyl',
    'CLI',
    'MH',
    'MMDF',
    'cleanup',
    'dedupe',
    'deduplication',
    'email',
    'mail',
    'mailbox',
    'maildir',
    'mbox',
]
classifiers = [
    # See: https://pypi.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Communications :: Email',
    'Topic :: Utilities',
    'Typing :: Typed',
]
# Semantic versioning works in theory. In practice, it is hard to guarantee.
# That's why we rely on >= specifier instead of ~= to relax constraints. This gives more freedom to packagers to
# release hotfixes for security vulnerabilities in the future.
# See also discussion about upper limits at: https://iscinumpy.dev/post/bound-version-constraints/#tldr
# All minimal version choice are documented. Reasons to bump a minimal version are:
# - bug fixes,
# - security fixes,
# - new code path we depends on,
# - aligns minimal Python requirements to ours,
# - adds new explicit support Python version.
dependencies = [
    # Provides enum.StrEnum for Python < 3.11; all versions expose the class.
    "backports.strenum >= 1 ; python_version < '3.11'",
    # boltons 25.0.0 dropped Python 3.9, matching our requires-python >= 3.10.
    "boltons >= 25.0.0",
    # click-extra 8.0.0 renamed ExtraCommand to Command and restructured the theme API.
    "click-extra >= 8.0.0",
    # Instant.from_timestamp() and Instant.format() pattern formatting (mail.py). whenever's pre-1.0 API still renames methods between releases, so pin to the 0.10 shape we build against.
    "whenever >= 0.10.0",
]

[dependency-groups]
## Non-runtime dependencies, for development and CI, are using the ~= specifier to reduce randomness.
## Unless the package has been referenced in sections above, in which case we align the version specifier.
test = [
    "click-extra [pytest, yaml] >= 8.0.0",
    "coverage [toml] ~= 7.12.0",
    "extra-platforms [pytest] ~= 13.0.0",
    "pytest ~= 9.0.1",
    "pytest-cov ~= 7.0.0",
    "pytest-github-actions-annotate-failures ~= 0.3.0",
    "pytest-randomly ~= 4.0.0",
]
typing = ["types-boltons ~= 25.0.0.20250822"]
docs = [
    "click-extra [sphinx] >= 8.0.0",
    "furo ~= 2025.9.25",
    "myst-parser ~= 4.0.0",
    # Sphinx  8.0.0 is the first version to drop Python 3.9, like us.
    "sphinx >= 8.0.0",
    # sphinx-autodoc-typehints 2.4.0 is the first version that is aligned to our Python >= 3.10 requirement.
    "sphinx-autodoc-typehints >= 2.4.0",
    "sphinx-click ~= 6.1.0",
    "sphinx-copybutton ~= 0.5.2",
    "sphinx-design ~= 0.6.0",
    "sphinxcontrib-mermaid ~= 1.2.3",
    "sphinxext-opengraph ~= 0.13.0",
    # tomli provides tomllib.loads() for Python < 3.11; docs/conf.py reads pyproject.toml.
    "tomli >= 2 ; python_version < '3.11'",
]

[project.urls]
"Homepage" = 'https://github.com/kdeldycke/mail-deduplicate'
"Documentation" = 'https://kdeldycke.github.io/mail-deduplicate'
"Download" = "https://github.com/kdeldycke/mail-deduplicate/releases/tag/v9.0.0"
"Repository" = 'https://github.com/kdeldycke/mail-deduplicate'
"Funding" = "https://github.com/sponsors/kdeldycke"
"Issues" = "https://github.com/kdeldycke/mail-deduplicate/issues"
"Changelog" = "https://github.com/kdeldycke/mail-deduplicate/blob/main/changelog.md"

[project.scripts]
mdedup = "mail_deduplicate.__main__:main"

[tool.nuitka]
product-name = "Mail Deduplicate"
file-description = "📧 CLI to deduplicate mails from mail boxes"
copyright = "Kevin Deldycke <kevin@deldycke.com> and contributors. Distributed under GPL-2.0-or-later license."
file-version = "9.0.0"
product-version = "9.0.0"
macos-app-icon = "docs/assets/icon.png"
linux-icon = "docs/assets/icon.png"
windows-icon-from-ico = "docs/assets/icon.png"

[tool.uv]
# Pin uv to a single minor series so every contributor and CI runner resolves
# uv.lock with the same resolver (astral-sh/setup-uv reads this automatically).
required-version = ">=0.11.23,<0.12"
# Cooldown buffer before adopting newly released packages.
exclude-newer = "1 week"
# click-extra 8.0.0 was published 2026-06-22, after the repomatic exclude-newer cooldown
# cutoff. Pin it here so sync-uv-lock can resolve it before the cooldown expires.
exclude-newer-package = {click-extra = "2026-06-23T00:00:00Z"}

[tool.uv.build-backend]
# Package is at root level, not in "./src/".
module-root = ""

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[tool.pytest]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
addopts = [
    "--durations=10",
    "--cov=mail_deduplicate",
    "--cov-branch",
    "--cov-precision=2",
    "--cov-report=term",
    "--cov-report=xml",
    # Codecov's test analytics requires a JUnit XML file:
    # https://docs.codecov.com/docs/test-analytics#1-output-a-junit-xml-file-in-your-ci
    "--junitxml=junit.xml",
    "--override-ini=junit_family=legacy",
]
# Make sure tests that are expected to fail do not resurect and start working all of a sudden.
xfail_strict = true

[tool.bumpversion]
current_version = "9.0.0"
# Parse versions with an optional .devN suffix (PEP 440).
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<dev>\\d+))?"
serialize = [
  "{major}.{minor}.{patch}.dev{dev}",
  "{major}.{minor}.{patch}",
]
ignore_missing_files = true
allow_dirty = true
parts.dev.optional_value = "release"
# When dev is "release" (its optional value), the .devN suffix is omitted.
# Bumping patch/minor/major resets dev to "0", producing X.Y.Z.dev0.
# Bumping dev goes from "0" to "release", stripping the suffix for release.
parts.dev.values = [ "0", "release" ]

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in [project] section. Anchored to a line start (regex) so it
# does not also match version-suffixed keys like file-version/product-version
# under [tool.nuitka], which contain `version = "X"` as a substring (their
# values collide with the package version on release commits, where the .devN
# suffix is absent).
filename = "./pyproject.toml"
regex = true
search = '(?m)^version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update version in download URL.
filename = "./pyproject.toml"
search = "releases/tag/v{current_version}"
replace = "releases/tag/v{new_version}"

[[tool.bumpversion.files]]
# Keep the numeric file-version/product-version under [tool.nuitka] in sync,
# when present. Nuitka rejects PEP 440 .devN suffixes, so the file-specific
# serialize strips them; the `-version = "` prefix matches both keys at once.
# ignore_missing_version makes this a no-op in projects without [tool.nuitka].
filename = "./pyproject.toml"
ignore_missing_version = true
serialize = [ "{major}.{minor}.{patch}" ]
search = '-version = "{current_version}"'
replace = '-version = "{new_version}"'

[[tool.bumpversion.files]]
# Update the version in Markdown changelog.
filename = "./changelog.md"
search = "## [`{current_version}` (unreleased)]("
replace = "## [`{new_version}` (unreleased)]("

[[tool.bumpversion.files]]
# Update the version in the citation file.
filename = "./citation.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
# Update the release date in the citation file.
filename = "./citation.cff"
regex = true
search = "date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}"
replace = "date-released: {utcnow:%Y-%m-%d}"

[tool.typos]
default.extend-identifiers = { Github = "GitHub", IOS = "iOS", Javascript = "JavaScript", MacOS = "macOS", PyPi = "PyPI", Typescript = "TypeScript" }
# False positives: "astroid" is a Python AST library (not "asteroid"); "oject" appears when "pyproject.toml" is split across line breaks in CLI help output.
default.extend-words = { astroid = "astroid", oject = "oject" }
# Skip content between <!-- typos:off --> and <!-- typos:on --> markers.
default.extend-ignore-re = [ "(?s)<!-- typos:off -->.*?<!-- typos:on -->" ]
default.extend-ignore-identifiers-re = [
    # "certifi" is the certificate-bundle package name, surfaced in the Mermaid
    # dependency graph at docs/assets/dependencies.mmd.
    "certifi",
    # error: `ist` should be `is`, `it`, `its`, `sit`, `list`
    #     ╭▸ ./docs/development.md:107:10
    #     │
    # 107 │ - [chalk.ist](https://chalk.ist)
    #     ╰╴         ━━━
    # error: `ist` should be `is`, `it`, `its`, `sit`, `list`
    #     ╭▸ ./docs/development.md:107:29
    #     │
    # 107 │ - [chalk.ist](https://chalk.ist)
    #     ╰╴                            ━━━
    "ist",
]

[tool.lychee]
exclude = [
  # Skip archive.ph and Sci-Hub because they restrict access to crawlers.
  # Skip HN because of rate-limiting.
  # See: https://github.com/lycheeverse/lychee/issues/989#issuecomment-1587208730
  # https://github.com/lycheeverse/lychee/pull/1147
  "archive\\.ph",
  "sci-hub\\.st",
  "ycombinator\\.com",
  "x\\.com",
  # Skip suggesting redirecting generic download links to their binary artefact.
  "^https://github.com/.+/releases/.+/download/.*$",
  # Allow redirects of generic DOI URLs to their specific Zenodo release page.
  "^https://doi.org/.+/zenodo.*$",
  # Allow redirects to the official pip documentation.
  "^https://pip.pypa.io/.*$",
]

[tool.ruff]
preview = true
fix = true
unsafe-fixes = true
show-fixes = true
# Enable formatting of Python code blocks in Markdown files.
# https://docs.astral.sh/ruff/formatter/#markdown-code-formatting
extend-include = [ "*.{markdown,mdown,mkdn,mdwn,mkd,md,mdtxt,mdtext,mdx}" ]
# Enable reformatting of code snippets in docstrings.
# https://docs.astral.sh/ruff/formatter/#docstring-formatting
format.docstring-code-format = true
# D400: First line should end with a period.
#   Allows docstrings to end up with any punctuation, not just a period.
#   See: https://github.com/astral-sh/ruff/issues/1858#issuecomment-1382640623
# ERA001: Found commented-out code.
#   Do not remove commented code, as it might be used for documentation.
#   See: https://docs.astral.sh/ruff/rules/#eradicate-era
# LOG015: Root logger calls (logging.info(), etc.).
#   The CLI configures the root logger via Click, so root logger calls are intentional.
#   See: https://docs.astral.sh/ruff/rules/root-logger-call/
lint.ignore = [ "D400", "ERA001", "LOG015" ]
# Allow rules to add `from __future__ import annotations` in cases where
# this would simplify a fix or enable a new diagnostic.
# https://docs.astral.sh/ruff/settings/#lint_future-annotations
lint.future-annotations = true
lint.isort.combine-as-imports = true

[tool.mdformat]
number = true

# Disable URL validation so mdformat-recover-urls can decode percent-encoded
# non-ASCII characters in link destinations back to their original form.
# See https://github.com/hukkin/mdformat/issues/312 and
# https://github.com/holy-two/mdformat-recover-urls.
validate = false

[tool.repomatic]
# Only the skills component is excluded. The label and renovate configs are
# materialised at runtime by their own workflows, so they are not committed
# here, matching the other downstream repositories.
exclude = [ "skills" ]
